Fix title and hamburger on Firefox

--- a/src/html/src/assets/main.css
+++ b/src/html/src/assets/main.css
@@ -118,7 +118,7 @@ button {
     font-size: 20px;
     line-height: 20px;
     margin-right: 10px;
-    margin-left: 20px;
+    margin-left: 1px;
 }
 
 .sidedrawer-toggle:hover {
